2011-02-25  Roland Levillain  <roland@lrde.epita.fr>

	Small corrections in apps/mesh-segm-skel.

	* apps/mesh-segm-skel/test-mesh-complex-max-curv-extrema.in:
	Add a missing copyright header.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Exercise topology-related routines.

	* tests/core/image/complex_image.hh
	(make_test_bin_2complex_image2d): New function.
	* tests/topo/is_facet.cc,
	* tests/make/detachment.cc,
	* tests/make/attachment.cc:
	New.
	* tests/topo/Makefile.am (check_PROGRAMS): Add is_facet.
	(is_facet_SOURCES): New.
	* tests/make/Makefile.am (check_PROGRAMS): Add attachment and
	detachment.
	(attachment_SOURCES, detachment_SOURCES): New.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	New complex image alias: mln::bin_2complex_image2d.

	* mln/core/alias/complex_image.hh (mln::bin_2complex_image2d):
	New typedef.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Revamp mln::topo::is_simple_cell.

	* mln/topo/is_simple_cell.hh
	(mln::topo::is_simple_cell<I, N, NL, NH>::operator()):
	Replace ad hoc code by a call to is_facet.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Have is_facet take into account the values of a (complex) image.

	* mln/topo/is_facet.hh (mln::topo::is_facet): Take a binary image
	and a neighborhood as arguments and take the image's values into
	account.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Revamp topology-related routines.

	* mln/make/attachment.hh,
	* mln/make/cell.hh,
	* mln/make/detachment.hh,
	* mln/topo/detach_cell.hh:
	Do not require the face passed as argument to be a facet.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Make the interface of thinning algorithms uniform w.r.t. functors.

	* mln/topo/skeleton/priority_driven_thinning.hh
	(mln::topo::skeleton::priority_driven_thinning): Catch up
	with mln::topo::skeleton::breadth_first_thinning.
	* mln/topo/detach_point.hh: Turn into a functor to match the new
	interface of thinning algorithms.